Make ESIOP_DEBUG compile (on some platforms? depends on bus definitions...) From Chris Ross in PR 42792.